# Firs_IT_Company-Manage_cash

./: .env_exaple  .gitignore  README.md  icon.md  pyproject.toml
config/: settings.py  urls.py
manage_cash/: admin.py  apps.py  forms.py  manage.py  models.py  urls.py  views.py
manage_cash/manage_cash/: asgi.py  settings.py  urls.py  wsgi.py
manage_cash/migrations/: 0001_initial.py  0002_initial.py
manage_cash/templates/manage_cash/: all_form.html  base.html  category_confirm_delete.html  category_form.html  home.html  list_category.html  list_status.html  list_subcategory.html  list_type.html  status_confirm_delete.html  status_form.html  subcategory_confirm_delete.html  subcategory_form.html  transaction_confirm_delete.html  transaction_form.html  type_confirm_delete.html  type_form.html
manage_cash/templates/manage_cash/includes/: inc_footer.html  inc_menu.html
manage_cash/views/: AJAX_module.py  __init__.py  create_directory.py  head_directory.py  list_category.py  list_status.py  list_subcategory.py  list_type.py
static/css/: custom_colour.css  main.css
static/js/: bootstrap.bundle.js
users/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_user_image.py
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  profile_edit.html  register.html
users/users/: settings.py  urls.py
