[project]
name = "firs-it-company-manage-cash"
version = "0.1.0"
description = ""
authors = [
    {name = "StreetShiffter",email = "agwzdushaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "python-dotenv (>=0.9.9,<0.10.0)",
    "ipython (>=9.5.0,<10.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"
isort = "^6.0.1"
black = "^25.9.0"

